[gd_scene format=3 uid="uid://dx5qn3m8fr2wk"]

[ext_resource type="Script" uid="uid://b4w1fxbmkdcgh" path="res://scenes/Player.gd" id="1_player"]
[ext_resource type="PackedScene" uid="uid://dxfoujgkv1e2y" path="res://scenes/FootstepPlayer.tscn" id="2_footstep"]
[ext_resource type="Material" uid="uid://dvpskin12345" path="res://assets/textures/player_skin.tres" id="3_skin"]
[ext_resource type="FontFile" uid="uid://siqgqfck828j" path="res://assets/fonts/NotoSans/NotoSans-Bold.ttf" id="4_408m0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_feet"]
size = Vector3(0.6, 0.2, 0.6)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_body"]
radius = 0.3
height = 1.4

[node name="NetworkPlayer" type="CharacterBody3D" unique_id=1515458623 groups=["NetworkPlayer", "Player"]]
collision_layer = 524288
collision_mask = 524289
script = ExtResource("1_player")
jump_impulse = 12
smooth_movement = true
max_speed_walk = 6

[node name="Pivot" type="Node3D" parent="." unique_id=406466574]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot" unique_id=122904108]
far = 2000.0

[node name="RayCast3D" type="RayCast3D" parent="Pivot/Camera3D" unique_id=1936367273]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -3, 0)
collision_mask = 524290

[node name="Feet" type="CollisionShape3D" parent="." unique_id=1011379788]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_feet")

[node name="CollisionShape2" type="CollisionShape3D" parent="." unique_id=875336534]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_body")

[node name="CeilingRayCast" type="RayCast3D" parent="." unique_id=324905585]
target_position = Vector3(0, 2.5, 0)

[node name="FootstepPlayer" parent="." unique_id=506442078 instance=ExtResource("2_footstep")]

[node name="BodyMesh" type="MeshInstance3D" parent="." unique_id=1138044698]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
mesh = SubResource("CapsuleMesh_body")
surface_material_override/0 = ExtResource("3_skin")

[node name="NameLabel" type="Label3D" parent="." unique_id=770185142]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
pixel_size = 0.002
billboard = 2
shaded = true
text = "Player"
font = ExtResource("4_408m0")
font_size = 128
outline_size = 32
vertical_alignment = 2
